--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,7 @@
 
 <header>
     <h1>{{title}}</h1>
-        <a href="/">Title</a>
+        <a href="/">Weather</a>
         <a href="/about">About</a>
         <a href="/help">Help</a>
 </header>
