--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>This site was created by: {{name}}, It uses data from mapbox.com & weatherAPI</p>
         <img src="/images/me.jpg" class="portrait">
     </div>
     {{>footer}}
